--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -2,14 +2,9 @@ book_filename: "GDSCN Book SARS with Galaxy on AnVIL"
 chapter_name: "Chapter "
 repo: https://github.com/jhudsl/GDSCN_Book_SARS_Galaxy_on_AnVIL/
 rmd_files: ["index.Rmd",
-            "03-lesson-plan.Rmd",
-            "04-variants.Rmd",
-            "05-sequencing.Rmd",
-            "06-alignments.Rmd",
-            "07-cloud.Rmd",
-            "08-overview-video.Rmd",
+            "03-instructor_guide.Rmd",
             "09-student_guide.Rmd",
-            "A-register-solutions.Rmd",
+            "A-answer_guide.Rmd",
             "B-help.Rmd",
             "D-download.Rmd",
             "E-feedback.Rmd",
