--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -8,7 +8,7 @@ rmd_files: ["index.Rmd",
             "B-help.Rmd",
             "D-download.Rmd",
             "E-feedback.Rmd",
-            "About.Rmd"]
+            "References.Rmd"]
 new_session: yes
 bibliography: [book.bib]
 delete_merged_file: true
